# LeetcodePerformanceTracker

./: .env.sample  .gitignore  README.md  docker-compose.yml  manifest.json
backend/: pyproject.toml
backend/flask_app/app/: __init__.py  config.py  database_helper.py  helpers.py  models.py  routes.py
backend/flask_app/app/templates/: base.html  home.html  login.html
backend/flask_app/migrations/versions/: 05dc0ab2bfc1_remove_difficulty_tag_from_questions.py  3dd7d2b610b8_keep_datetime_as_string_rename_users_.py  613add6e2a3d_keep_datetime_as_string_rename_users_.py  758c8260ff3c_save_submission_dt_as_datetime.py  77dcca806d47_add_time_taken_to_user_sumbissions_table.py  c35b64032caa_updated_questions_table_and_new_users_.py  c4500ccc59c8_initial_migration.py  d44f84369943_keep_submission_status_as_string.py  f07f5dd95460_keep_datetime_as_string_rename_users_.py
chrome-extension/CSS/: main.css
chrome-extension/HTML/: index.html  timer.html
chrome-extension/js/: contentScript.js  popup.js  timer.js
flask-app/: pyproject.toml
flask-app/flask_app/: .flaskenv
flask-app/flask_app/app/: __init__.py  config.py  database_helper.py  models.py  routes.py
flask-app/flask_app/migrations/versions/: 2d14316a4bff_save_submission_dt_as_datetime.py
flask-app/tests/: test_flask_app.py
front-end/HTML/: index.html
front-end/JS/: background.js  main.js
pg_database/: README.md  docker-compose.yml
