[tool.poetry]
name = "flask-app"
version = "0.1.0"
description = ""
authors = ["venkateshg05 <venkatesh_gopal@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.2"
python-dotenv = "^0.20.0"
Flask-SQLAlchemy = "^2.5.1"
Flask-Migrate = "^3.1.0"
psycopg2 = "^2.9.3"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
